--- a/TalkItOut/TalkItOut/TalkItOut.csproj
+++ b/TalkItOut/TalkItOut/TalkItOut.csproj
@@ -20,4 +20,9 @@
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.7.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+      <Folder Include="Entities\" />
+    </ItemGroup>
+
 </Project>
