--- a/TalkItOut/TalkItOut/TalkItOut.csproj
+++ b/TalkItOut/TalkItOut/TalkItOut.csproj
@@ -27,4 +27,10 @@
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.7.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
