--- a/TalkItOut/TalkItOut/appsettings.json
+++ b/TalkItOut/TalkItOut/appsettings.json
@@ -7,6 +7,6 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=Talk-It-Out;Trusted_Connection:True"
+        "DbSet": "Server=localhost;Database=TalkItOut;Trusted_Connection=True;TrustServerCertificate=True"
     }
 }
