--- a/TalkItOut/mobile/package.json
+++ b/TalkItOut/mobile/package.json
@@ -17,9 +17,18 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "@tamagui/animations-react-native": "^1.112.21",
+    "@tamagui/babel-plugin": "^1.112.21",
+    "@tamagui/config": "^1.112.21",
+    "@tamagui/font-inter": "^1.112.21",
+    "@tamagui/shorthands": "^1.112.21",
+    "@tamagui/theme-base": "^1.112.21",
+    "@tamagui/themes": "^1.112.21",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
+    "expo-font": "~12.0.10",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -27,13 +36,14 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "^0.19.12",
+    "tamagui": "^1.112.21"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
