--- a/TalkItOut/TalkItOut/appsettings.json
+++ b/TalkItOut/TalkItOut/appsettings.json
@@ -6,6 +6,7 @@
             "Microsoft": "Information"
         }
     },
+    "AllowedHosts": "*",
     "ConnectionStrings": {
         "DbSet": "Server=localhost;Database=TalkItOut;Trusted_Connection=True;TrustServerCertificate=True"
     }
