--- a/TalkItOut/mobile/app.json
+++ b/TalkItOut/mobile/app.json
@@ -32,6 +32,11 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "infoPlist": {
+      "NSAppTransportSecurity": {
+        "NSAllowsArbitraryLoads": true
+      }
     }
   }
 }
