--- a/TalkItOut/TalkItOut/Properties/launchSettings.json
+++ b/TalkItOut/TalkItOut/Properties/launchSettings.json
@@ -11,7 +11,7 @@
   "profiles": {
     "TalkItOut": {
       "commandName": "Project",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000;http://0.0.0.0:5000;http://0.0.0.0:5001;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
