--- a/TalkItOut/tio-app/package.json
+++ b/TalkItOut/tio-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tamagui/config": "^1.116.2",
     "@tamagui/core": "^1.111.3",
     "@tamagui/helpers": "^1.111.3",
     "@tamagui/static": "^1.111.3",
