--- a/TalkItOut/tio-app/package.json
+++ b/TalkItOut/tio-app/package.json
@@ -16,6 +16,7 @@
     "@tamagui/vite-plugin": "^1.111.3",
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-native": "^0.75.3",
     "react-native-svg": "^15.6.0",
