--- a/TalkItOut/tio-app/package.json
+++ b/TalkItOut/tio-app/package.json
@@ -20,6 +20,7 @@
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-native": "^0.75.3",
     "react-native-svg": "^15.6.0",
     "react-native-web": "^0.19.12",
