--- a/TalkItOut/tio-app/package.json
+++ b/TalkItOut/tio-app/package.json
@@ -25,6 +25,7 @@
     "react-native-svg": "^15.6.0",
     "react-native-web": "^0.19.12",
     "react-router-dom": "^6.26.2",
+    "react-select": "^5.8.2",
     "react-use": "^17.5.1",
     "tamagui": "^1.111.3",
     "vite-plugin-react-native-web": "^1.0.3"
