--- a/TalkItOut/tio-app/package.json
+++ b/TalkItOut/tio-app/package.json
@@ -15,8 +15,12 @@
     "@tamagui/helpers": "^1.111.3",
     "@tamagui/static": "^1.111.3",
     "@tamagui/vite-plugin": "^1.111.3",
+    "@types/react-big-calendar": "^1.16.0",
     "axios": "^1.7.7",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.16.3",
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
@@ -42,6 +46,6 @@
     "globals": "^15.9.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.5"
+    "vite": "^6.0.1"
   }
 }
