--- a/TalkItOut/TalkItOut/TalkItOut.csproj
+++ b/TalkItOut/TalkItOut/TalkItOut.csproj
@@ -25,6 +25,7 @@
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+      <PackageReference Include="QuestPDF" Version="2024.12.0-rc3" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.7.3" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.7.3" />
     </ItemGroup>
