installed some icons

--- a/TalkItOut/tio-app/package.json
+++ b/TalkItOut/tio-app/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@tamagui/config": "^1.116.2",
     "@tamagui/core": "^1.111.3",
     "@tamagui/helpers": "^1.111.3",
